test/Fail/Issue1976.err
Issue1976.agda:20.1-8: error: [UnequalTerms]
A != B of type Set
when checking the clause left hand side
F wrong
